IndexedEntryTables